--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
   cloud_firestore: ^0.14.0+2  #new
+  adobe_xd: ^1.0.0+1
 
 dev_dependencies:
   flutter_test:
