--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cloud_firestore: ^0.14.0+2  #new
+  firebase_auth: ^0.18.0+1
+  #flutter_login: ^1.0.14  #for login form
+  #fluttertoast: ^7.0.2  #login toast
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
-  cloud_firestore: ^0.14.0+2  #new
 
 dev_dependencies:
   flutter_test:
