-Updated User Authentication (Able to track when a user log in/log out) -Updated Error Checking (if email existed, password length, etc) -Changed dependencies version for gradle and google services -Home page is linked to profile_page2.dart -Sign out widget only shown on profile_page.dart (will add to the rest if needed in the future) -Edited profile_page.dart, please check your own file to see if there is any clashes, thanks.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,6 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'com.google.gms.google-services'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -61,5 +60,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    testImplementation 'junit:junit:4.12'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
