--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,21 +18,21 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^0.14.0+2  #new
-  firebase_auth: ^0.18.0+1
-  #flutter_login: ^1.0.14  #for login form
-  #fluttertoast: ^7.0.2  #login toast
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.12.9+4
+  provider: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
   flutter_clean_calendar: ^1.0.2+1
+
 
 dev_dependencies:
   flutter_test:
