--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/avatar.png
+     - assets/images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -65,17 +65,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Roboto
+      fonts:
+        # - asset: assets/fonts/Roboto/Roboto-Light.ttf
+         - asset: assets/fonts/Roboto/Roboto-Medium.ttf
+        # - asset: assets/fonts/Roboto/Roboto-Regular.ttf
+        # - asset: assets/fonts/Roboto/Roboto-BoldItalic.ttf
+    # - family: Trajan Pro
+    #   fonts:
+    #     - asset: fonts/TrajanPro.ttf
+    #     - asset: fonts/TrajanPro_Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
