--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+4
+  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
   provider: ^3.1.0
   flutter_spinkit: ^4.1.2
+  percent_indicator: ^2.1.7+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
