--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,16 @@ dependencies:
   provider: ^3.1.0
   flutter_spinkit: ^4.1.2
   percent_indicator: ^2.1.7+3
+  date_utils: ^0.1.0+3
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
-  flutter_clean_calendar: ^1.0.2+1
-
+  #flutter_clean_calendar: ^1.0.2+1
+  flutter_clean_calendar:
+    path: packages/flutter_clean_calendar
 
 dev_dependencies:
   flutter_test:
