--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
-  flutter_clean_calendar: ^1.0.2+1
+
+  date_utils: ^0.1.0+3
+  intl: ^0.16.1
+  flutter_clean_calendar:
+    path: packages/flutter_clean_calendar
 
 
 dev_dependencies:
