--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,6 +29,8 @@ dependencies:
   provider: ^3.1.0
   flutter_spinkit: ^4.1.2
   percent_indicator: ^2.1.7+3
+  firebase_helpers: ^0.2.1
+  table_calendar: ^2.2.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -39,7 +41,6 @@ dependencies:
   intl: ^0.16.1
   flutter_clean_calendar:
     path: packages/flutter_clean_calendar
-
 
 dev_dependencies:
   flutter_test:
