--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_helpers:
   table_calendar:
   font_awesome_flutter:
+  image_picker:
 
 
   # The following adds the Cupertino Icons font to your application.
